--- a/src/components/Home/AnimeExclusive.scss
+++ b/src/components/Home/AnimeExclusive.scss
@@ -1,9 +1,9 @@
-.container-figure {
-    margin-top: 5%;
-    height: 27rem;
+.container-AnimeExclusive {
+    margin-top: 10%;
+    height: 32rem;
 
 
-    .header-figure {
+    .header-AnimeExclusive {
         display: flex;
         align-items: center;
 
@@ -28,7 +28,7 @@
         width: 95%;
         cursor: pointer;
 
-        .figure-content {
+        .AnimeExclusive-content {
             display: flex;
             gap: 9px;
 
