--- a/src/components/FooterApp.scss
+++ b/src/components/FooterApp.scss
@@ -1,6 +1,7 @@
 .footer-container {
-    background-color: rgba(0, 0, 0, 0.915);
-    height: 100%;
+    background-color: #4464b4;
+    color: #fff;
+    height: 38rem;
     max-height: 60rem;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 
@@ -9,38 +10,114 @@
         // background: url('../asset/image/IntroDuce/bg-footer.jpg') center center no-repeat;
         background-size: cover;
         display: flex;
-        justify-content: center;
-        gap: 40px;
         flex-wrap: wrap;
+        height: 100%;
+        padding: 35px;
 
-        .footer-content {
-            margin-top: 30px;
 
-            .img-logo {
-                width: 200px;
-                height: 110px;
-                height: auto;
-            }
 
-            p {
-                color: rgba(255, 255, 255, 0.564);
-            }
+        .content-left {
+            display: flex;
+            flex-wrap: wrap;
+            width: 25%;
+            justify-content: center;
 
-            .row-img-footer {
-
-                gap: 20px;
+            .title-contact {
                 display: flex;
-                margin-top: 20px;
-                flex-wrap: wrap;
-                justify-content: center;
+                flex-direction: column;
+                margin-top: 60px;
 
-                img {
-                    width: 24vw;
-                    max-width: 85px;
-                    height: 24vw;
-                    max-height: 95px;
-                    object-fit: contain;
+                span {
+                    font-weight: 600;
+                    font-size: 18px;
                 }
+
+                a {
+                    margin-top: 10px;
+                    color: white;
+                    text-decoration: none;
+                    font-size: 14px;
+
+                    &:hover {
+                        color: rgb(195, 195, 221)
+                    }
+                }
+
+                .Social-content {
+                    display: flex;
+                    gap: 10px;
+                    margin-top: 20px;
+
+                    i {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        border: 1px solid rgb(62, 61, 61);
+                        height: 40px;
+                        width: 40px;
+                        border-radius: 50%;
+
+                        &:hover.active1 {
+
+                            background: #3b5a9a;
+                            color: white;
+
+                        }
+
+                        &:hover.active2 {
+
+                            background: #69b6f2;
+                            color: white;
+
+                        }
+
+                        &:hover.active3 {
+
+                            background: #eb9f3c;
+                            color: white;
+
+                        }
+                    }
+                }
+            }
+
+        }
+
+        .content-center {
+            width: 25%;
+
+            .title-contact {
+                display: flex;
+                flex-direction: column;
+                margin-top: 60px;
+                margin-left: 20%;
+
+                span {
+                    font-weight: 600;
+                    font-size: 18px;
+                }
+
+                a {
+                    margin-top: 10px;
+                    color: white;
+                    text-decoration: none;
+                    font-size: 14px;
+
+                    &:hover {
+                        color: rgb(195, 195, 221)
+                    }
+                }
+
+            }
+        }
+
+        .content-right {
+            width: 50%;
+
+            iframe {
+                margin-left: 70px;
+                margin-top: 60px;
+                border-radius: 10px;
             }
         }
     }
@@ -52,5 +129,24 @@
         align-items: center;
         justify-content: center;
         color: rgba(255, 255, 255, 0.564)
+    }
+
+    .footer-end {
+        font-size: 14px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 80px;
+        background-color: #385eaa;
+
+        span {
+            width: 50%;
+            text-align: center;
+        }
+
+        .creadit {
+            width: 50%;
+        }
     }
 }
