--- a/src/components/Header/Login/Login.scss
+++ b/src/components/Header/Login/Login.scss
@@ -1,116 +1,131 @@
-.main-container {
+.login-container {
+    &.register {
+        width: 100%;
+        height: 50rem;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+
+    }
+
+    width: 100%;
+    height: 43rem;
+    position: relative;
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
 
-    .form-container {
-        height: 400px;
-        width: 25rem;
-        background-color: #eaf2f669;
-        padding: 16px;
+    .content-up {
+        width: 100%;
+        height: 24%;
+        background-color: #827c7c2b;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 13px;
+        text-transform: uppercase;
+        flex-direction: column;
 
-        .Header-login {
-            text-align: center;
-            color: black;
-            font-size: 1.8rem;
-            font-weight: 800;
-            padding-bottom: 8px;
+        a {
+            text-decoration: none;
         }
 
-        .form-content {
-
-            .form-control {
-                margin: 8px 0;
-            }
-
-            .input-password {
-
-                position: relative;
-
-                i {
-                    top: 30%;
-                    left: 90%;
-                    position: absolute;
-                    cursor: pointer;
-                }
-
-            }
+        span {
+            color: #777;
         }
 
-        .forget-password {
-            font-size: 15px;
-            color: rgb(78, 153, 179);
-            cursor: pointer;
-            text-decoration: underline;
-            float: right;
+        h4 {
+            margin-top: 5px;
+            font-weight: bold;
         }
+    }
 
-        .clear {
-            clear: both;
-        }
+    .content-down {
+        width: 80%;
+        height: 76%;
 
-        .btn-login {
-            margin-top: 10px;
+
+        .main-contet-login {
+            margin: 0 auto;
+            align-items: center;
+            height: 100%;
+
+            width: 100%;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
+            padding-top: 30px;
 
-            .btn-acction {
-                width: 100%;
-                border: none;
-                border-radius: 5px;
-                line-height: 2.8rem;
-                cursor: pointer;
+            .form-group {
 
-                &:hover {
-                    background-color: #eeeeee6c;
+                color: #777;
+                overflow: hidden !important;
+                outline: none !important;
+                padding-top: 10px;
+
+                .header-form {
+                    margin-bottom: 20px;
                     color: black;
+                    font-size: 25px;
+                    font-weight: 700;
+                }
+
+                label {
+                    font-size: 14px;
+                }
+
+                input {
+
+                    margin-bottom: 10px;
+                    margin-top: 7px;
+                    border-radius: 0%;
+                    height: 50px;
+                    width: 100%;
+                }
+
+                .forgot-password {
+                    font-size: 15px;
+                    margin-top: 18px;
+                    color: black;
+                    font-weight: 600;
+
+                    &:hover {
+                        cursor: pointer;
+                    }
+                }
+
+                .button-control {
+                    margin-top: 18px;
+                    display: flex;
+                    flex-direction: column;
+
+                    .btn-login {
+                        text-transform: uppercase;
+                        font-size: 18px;
+                        font-weight: 700;
+                        color: aliceblue;
+                        border-radius: 0%;
+                        height: 56px;
+                        width: 100%;
+                        background-color: rgba(0, 0, 0, 0.852);
+                        margin-bottom: 18px;
+
+                        &:hover {
+                            background-color: rgba(0, 0, 0, 0.781);
+                        }
+                    }
                 }
             }
-
-            .btn-disable-acction {
-                width: 100%;
-                border: none;
-                border-radius: 5px;
-                line-height: 2.8rem;
-                cursor: pointer;
-                overflow: hidden;
-                cursor: not-allowed;
-
-            }
-        }
-
-
-    }
-
-    .dont-account {
-        font-size: 15px;
-        margin: 1.2em;
-
-        a {
-            margin-left: 3px;
-            text-decoration: none;
         }
     }
+}
 
-    .return-home {
-        font-weight: 200;
-        font-size: 14px;
-        display: block;
-        float: right;
-        margin-top: 30px;
-
-        &:hover {
-            transform: translateX(5px);
-            cursor: pointer;
-        }
-
-        a {
-            text-decoration: none;
-        }
+@media(max-width : 480px) {
+    .content-down .col-6 {
+        width: 100%;
     }
+
+
 }
