--- a/src/App.scss
+++ b/src/App.scss
@@ -18,5 +18,6 @@ code {
 .App-container {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
-    height: 100vh;
+
+    .App-MainContainer {}
 }
