--- a/src/components/Home/Banner/Banner.scss
+++ b/src/components/Home/Banner/Banner.scss
@@ -56,6 +56,10 @@
             border-right: 1.5px solid #fbfbfb;
             justify-content: center;
             cursor: pointer;
+
+            i {
+                font-size: 13px;
+            }
         }
 
         .icon-search {
