--- a/src/components/Home/Precharaters.scss
+++ b/src/components/Home/Precharaters.scss
@@ -101,7 +101,7 @@
                             border: none;
                             background-color: rgb(237, 141, 24);
                             height: 35px;
-                            width: 109px;
+                            min-width: 109px;
                             color: azure;
                             text-transform: uppercase;
                             font-size: 13px;
@@ -190,6 +190,97 @@
             display: flex;
             font-size: 18px;
             margin-right: 20px;
+        }
+    }
+}
+
+/* Responsive cho màn hình vừa */
+@media (max-width: 728px) {
+    .container-charater {
+        margin-top: 3%;
+
+        .header-charater {
+            .inline-title {
+                text-transform: uppercase;
+                font-size: 20px;
+                /* Giảm kích thước chữ hơn nữa */
+            }
+        }
+
+        .content-main {
+            .charater-content {
+                .content {
+                    flex: 1 1 calc(50% - 10px);
+                    /* Chuyển sang 2 cột */
+                    max-width: calc(50% - 10px);
+
+                    .img-display img {
+                        height: 180px;
+                        /* Điều chỉnh chiều cao */
+                    }
+                }
+            }
+        }
+    }
+}
+
+/* Responsive cho màn hình nhỏ */
+@media (max-width: 480px) {
+    .container-charater {
+        margin-top: 2%;
+        height: auto;
+
+        .header-charater {
+            justify-content: center;
+
+            .inline-title {
+                font-size: 18px;
+            }
+
+            .line-l,
+            .line-r {
+                width: 15%;
+                /* Giảm chiều dài đường kẻ */
+            }
+        }
+
+        .content-main {
+            .charater-content {
+                flex-wrap: wrap;
+                width: 100%;
+
+
+                .content {
+                    max-width: 49%;
+                    margin-top: 20px;
+
+                    .img-display {
+                        width: 100%;
+                    }
+
+                    .img-display img {
+                        width: 100%;
+                        height: 140px;
+                        /* Giảm chiều cao */
+                    }
+
+                    .info-display {
+                        font-size: 16px;
+
+
+                        .cost-display {
+                            font-size: 16px;
+                            /* Điều chỉnh chữ cho vừa */
+                        }
+
+                        .evaluate .add-to-cart,
+                        .icon-show {
+                            margin-left: 0;
+                            width: 100%;
+                        }
+                    }
+                }
+            }
         }
     }
 }
