--- a/src/components/Home/AnimeExclusive.scss
+++ b/src/components/Home/AnimeExclusive.scss
@@ -26,7 +26,6 @@
         margin-top: 4%;
         height: 100%;
         width: 95%;
-        cursor: pointer;
 
         .AnimeExclusive-content {
             display: flex;
@@ -34,7 +33,7 @@
 
             .content {
                 position: relative;
-
+                cursor: pointer;
 
                 .img-display {
                     margin-bottom: 10px;
@@ -64,13 +63,29 @@
                     text-align: center;
                     font-weight: 600;
 
+                    .line-clamp {
+                        display: -webkit-box;
+                        /* Sử dụng định dạng khối linh hoạt */
+                        -webkit-box-orient: vertical;
+                        /* Hướng khối theo chiều dọc */
+                        -webkit-line-clamp: 2;
+                        /* Giới hạn hiển thị tối đa 2 dòng */
+                        overflow: hidden;
+                        /* Ẩn phần nội dung vượt quá */
+                        text-overflow: ellipsis;
+                        /* Thêm dấu "..." ở cuối */
+                        word-break: break-word;
+                        /* Bẻ từ nếu quá dài */
+                    }
+
                     .cost-display {
+                        margin-top: 5px;
                         font-size: 20px;
                         font-weight: 600;
                     }
 
                     .evaluate {
-                        margin-top: 7px;
+                        margin-top: 9px;
                         display: flex;
                         align-items: center;
                         justify-content: center;
