--- a/src/components/Home/Precharaters.scss
+++ b/src/components/Home/Precharaters.scss
@@ -28,19 +28,22 @@
     .content-main {
         margin-top: 4%;
         height: 100%;
-        width: 95%;
-        cursor: pointer;
+        width: 100%;
+
 
         .charater-content {
             flex-wrap: wrap;
             /* Tự động xuống dòng */
             justify-content: space-around;
             display: flex;
-            gap: 9px;
+            margin-left: 5px;
+
+
 
             .content {
-                position: relative;
 
+                position: relative;
+                cursor: pointer;
 
                 .img-display {
                     margin-bottom: 10px;
@@ -70,13 +73,29 @@
                     text-align: center;
                     font-weight: 600;
 
+                    .line-clamp {
+                        display: -webkit-box;
+                        /* Sử dụng định dạng khối linh hoạt */
+                        -webkit-box-orient: vertical;
+                        /* Hướng khối theo chiều dọc */
+                        -webkit-line-clamp: 2;
+                        /* Giới hạn hiển thị tối đa 2 dòng */
+                        overflow: hidden;
+                        /* Ẩn phần nội dung vượt quá */
+                        text-overflow: ellipsis;
+                        /* Thêm dấu "..." ở cuối */
+                        word-break: break-word;
+                        /* Bẻ từ nếu quá dài */
+                    }
+
                     .cost-display {
+                        margin-top: 5px;
                         font-size: 20px;
                         font-weight: 600;
                     }
 
                     .evaluate {
-                        margin-top: 7px;
+                        margin-top: 9px;
                         display: flex;
                         align-items: center;
                         justify-content: center;
