--- a/src/components/Home/PreFigures.scss
+++ b/src/components/Home/PreFigures.scss
@@ -39,6 +39,7 @@
 
                 .img-display {
                     margin-bottom: 10px;
+                    width: 100% !important;
 
                     img {
                         padding: 6px;
