--- a/src/components/Home/Precharaters.scss
+++ b/src/components/Home/Precharaters.scss
@@ -274,7 +274,7 @@
                     margin-top: 20px;
 
                     .img-display {
-                        width: 100%;
+                        width: 100% !important;
                     }
 
                     .img-display img {
