--- a/src/App.scss
+++ b/src/App.scss
@@ -19,5 +19,20 @@ code {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 
-    .App-MainContainer {}
+    .App-MainContainer {
+        .slick-dots li button {
+            font-size: 0;
+            line-height: 0;
+            display: block;
+            width: 20px !important;
+            height: 20px;
+            padding: 5px;
+            cursor: pointer;
+            color: transparent;
+            border: 0;
+
+            outline: none;
+            background: transparent;
+        }
+    }
 }
