--- a/src/components/Home/AnimeExclusive.scss
+++ b/src/components/Home/AnimeExclusive.scss
@@ -37,6 +37,7 @@
 
                 .img-display {
                     margin-bottom: 10px;
+                    width: 100% !important;
 
                     img {
                         padding: 6px;
