--- a/src/components/MainBanner/MainBanner.scss
+++ b/src/components/MainBanner/MainBanner.scss
@@ -160,12 +160,11 @@
     height: 40px !important;
     width: 50px !important;
     display: none !important;
-    transition: .3s;
+    transition: .3s !important;
     background-color: rgba(0, 0, 0, 0.248) !important;
     border-radius: 50%;
 
     &:hover {
-
         border-radius: 50%;
         background: rgba(124, 192, 214, 0.704) !important;
     }
@@ -188,8 +187,8 @@
 
 .slick-next {
     background-color: rgba(0, 0, 0, 0.248) !important;
-    transition: .3s;
-    right: 7% !important;
+
+    right: 8% !important;
     z-index: 100;
     height: 40px !important;
     width: 50px !important;
@@ -198,8 +197,8 @@
 
     &:hover {
 
+        transition: .3s !important;
         border-radius: 50%;
-
         background: rgba(124, 192, 214, 0.704) !important;
     }
 }
@@ -236,8 +235,9 @@
 
         &:hover .slick-next,
         &:hover .slick-prev {
-
+            transform: translate(10px, -50%) !important;
             display: block !important;
+
         }
 
     }
