--- a/src/components/Admin/DisplayAdd/ImgSection.scss
+++ b/src/components/Admin/DisplayAdd/ImgSection.scss
@@ -1,5 +1,6 @@
 .btn-add-banner {
-    border-radius: 0 !important;
+    border-radius: 4px;
+    margin: 10px 0;
     width: fit-content;
     font-size: 15px !important;
 }
