--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -15,8 +15,9 @@
     }
 
     .text-left-header {
-        font-size: 11px;
+        font-size: 12px;
         color: #777;
+        font-weight: 600;
     }
 
     .transparent-navbar {
@@ -32,8 +33,8 @@
 
         .header__option {
             color: #777 !important;
-            font-size: 11px;
-
+            font-size: 12px;
+            font-weight: 600;
             margin-top: 4px;
 
             .header-drop {
